--- a/web/css/shop-homepage.css
+++ b/web/css/shop-homepage.css
@@ -25,6 +25,14 @@ h1 {
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
+.btn_create_task{
+    padding: 0 15px;
+    margin-bottom: 25px ;
+}
+
+.bloc-task{
+    margin-bottom: 20px;
+}
 
 .slide-image {
     width: 100%;
