--- a/Templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/Templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 	<div class="row">
 		<a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-		<a href="{{ path('task_todo_list') }}" class="btn btn-info">Retourner à la liste des tâches à faire</a>
+		<a href="{{ path('task_list') }}" class="btn btn-info">Retourner à la liste des tâches à faire</a>
 		<a href="{{ path('task_done_list') }}" class="btn btn-secondary">Retourner à la liste des tâches terminées</a>
 	</div>
 {% endblock %}
