--- a/Templates/default/index.html.twig
+++ b/Templates/default/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block header_title %}
+    <h6>L'utilisateur est connecté avec le compte:{{ app.user.email }}</h6>
     <h1>Bienvenue sur Todo List, l'application vous permettant de gérer l'ensemble de vos tâches sans effort !</h1>
 {% endblock %}
 
@@ -8,7 +9,7 @@
 
     <div class="row">
         <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_todo_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
+        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
         <a href="{{ path('task_done_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
     </div>
 {% endblock %}
