--- a/Templates/task/edit.html.twig
+++ b/Templates/task/edit.html.twig
@@ -8,7 +8,7 @@
             {% if task.isDone == true %}
                 <a href="{{ path('task_done_list') }}" class="btn btn-primary">Retour à la liste des tâches terminées</a>
             {% else %}
-                <a href="{{ path('task_todo_list') }}" class="btn btn-primary">Retour à la liste des tâches à faire</a>
+                <a href="{{ path('task_list') }}" class="btn btn-primary">Retour à la liste des tâches à faire</a>
             {% endif %}
             <button type="submit" class="btn btn-success pull-right">Modifier</button>
         {{ form_end(form) }}
