--- a/Templates/task/listDone.html.twig
+++ b/Templates/task/listDone.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block header_title %}
+
 	{% if type is defined and type == 'done' %}
 		<h1>Liste des tâches terminées</h1>
 	{% else %}
@@ -15,9 +16,9 @@
 {% block body %}
 	<div class="row row-button">
 		{% if type is defined and type == 'done' %}
-			<a href="{{ path('task_list') }}" class="btn btn-info pull-right">Consulter la liste des tâches à faire</a>
+			<a href="{{ path('task_done_list') }}" class="btn btn-info pull-right">Consulter la liste des tâches à faire</a>
 		{% else %}
-			<a href="{{ path('task_done_list') }}" class="btn btn-secondary pull-right">Consulter la liste des tâches terminées</a>
+			<a href="{{ path('task_list') }}" class="btn btn-secondary pull-right">Consulter la liste des tâches terminées</a>
 		{% endif %}
 
 		<a href="{{ path('task_create') }}" class="btn btn-info pull-right btn-create">Créer une tâche</a>
@@ -25,7 +26,7 @@
 
 	<div class="row">
 		{% for task in tasks %}
-			{% if task.isDone == 0 %}
+			{% if task.isDone == 1 %}
 			<div class="col-sm-4 col-lg-4 col-md-4 task-card">
 				<div class="thumbnail" id="task{{ task.id }}">
 					<div class="caption">
@@ -51,13 +52,9 @@
 							</button>
 						</form>
 						{% if app.user == task.author or is_granted('ROLE_ADMIN') and task.author == null%}
-						<a class="btn btn-danger btn-sm pull-right" href="{{ path('task_delete', {'id' : task.id }) }}"
-						   id="delete_button_{{ task.id }}">Supprimer</a>
+							<a class="btn btn-danger btn-sm pull-right" href="{{ path('task_delete', {'id' : task.id }) }}"
+							   id="delete_button_{{ task.id }}">Supprimer</a>
 						{% endif %}
-
-
-
-
 					</div>
 				</div>
 			</div>
