--- a/Templates/task/listDone.html.twig
+++ b/Templates/task/listDone.html.twig
@@ -40,7 +40,7 @@
 						<h4>
 							<a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a>
 						</h4>
-						<h6>Auteur: {% if task.author %}{{ task.author.username }}{% else %}Anonyme{% endif %}</h6>
+						<h6>Auteur:<span id="user"> {% if task.author %}{{ task.author.username }}{% else %}Anonyme{% endif %}</span></h6>
 						<p>{{ task.content }}</p>
 
 					</div>
