--- a/Templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/Templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block header_title %}
-    <h1 class="alert alert-danger">Erreur : Vous n'êtes pas autorisés à accéder à cette page</h1>
+    <h1 class="alert alert-danger">Erreur : Vous n'êtes pas autorisé à accéder à cette page</h1>
 {% endblock %}
 
 {% block body %}
